# maple-life-docs

./: .editorconfig  .env.example  .gitattributes  .gitignore  README.md  asgi.py  fastapi_run.py  package-lock.json  package.json  requirements.txt  run.py  wrangler.toml.example
.docs/msw/: README.md  codex-working-guide.md  maple-life-docs-api-reference.md  msw-agent-optimization-rules.md  msw-project-overview.md
.github/workflows/: deploy-python-worker.yml
app/: __init__.py  api.py  constants.py  dashboard.py  db.py  documents.py  documents_v2.py  documents_v3.py  documents_v4.py  frontend.py  members.py  page_view_logging.py  routes.py  schedules.py  schedules_v2.py  schedules_v3.py  settings.py  storage.py  utils.py  wbs.py  wbs_v2.py
app/repositories/: assets.py  common.py  contracts.py  d1_backend.py  dashboard.py  db_access.py  documents.py  members.py  provider.py  runtime_provider.py  schedules.py  sqlite_backend.py  wbs.py
app/static/: app.js  app_v3.js  markdown.js  styles.css
app/templates/: base.html  index.html
database/d1/: README.md  export_sqlite_to_d1.py  schema.sql
deployment/: asgi_uvicorn.example.txt  pythonanywhere_wsgi.example.py
fastapi_app/: dependencies.py  helpers.py  main.py
fastapi_app/routers/: assets.py  (+8 more)
frontend/: index.html  package-lock.json  vite.config.js
instance/: app.db  test_app.db  test_app.db-journal
scripts/: pythonanywhere_refresh.sh
worker/: index.js
worker-python/: pyproject.toml  wrangler.toml.example
worker-python/src/: d1_queries.py  entry.py  markdown_tools.py  models.py  ui.py  web_ui.py
(+542 files in other folders)
