[project]
name = "maple-life-docs-python-worker"
version = "0.1.0"
description = "Cloudflare Python Worker scaffold for MAPLE LIFE DEV Docs"
requires-python = ">=3.13"
dependencies = [
    "black",
    "fastapi",
    "markdown",
    "python-multipart",
    "PyYAML",
    "sqlparse",
    "workers-runtime-sdk",
]

[dependency-groups]
dev = [
    "workers-py",
]
